# rag

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  cli.py  pyproject.toml  requirements.txt  test.ipynb
api/: catalog.py  loader_service.py  main.py  pipeline_service.py  prompt_service.py  schemas.py  source_store.py  template_service.py
api/routers/: components.py  experiments.py  pipelines.py  prompts.py  sources.py
clis/: cli.py  eval_cli.py
components/: shared_types.py
components/_base/: __init__.py  settings.py
components/chunking/: __init__.py  chunk_utils.py  code_aware_chunker.py  late_chunker.py  recursive_chunker.py  semantic_chunker.py
components/context/: __init__.py  context_builder.py  context_merger.py  context_truncator.py
components/evaluation/: __init__.py  dataset.py  evaluator.py  metrics.py  ragas_eval.py  ragas_metrics.py
components/generation/: __init__.py  generator.py  output_parser.py  prompt_builder.py  streaming_generator.py
components/indexer/: __init__.py  coarse_indexer.py  embedding_indexer.py  indexer_schema.py  local_vector_db.py  repo_graph_indexer.py
components/ingestion/: __init__.py  base_loader.py  code_loader.py  directory_loader.py  document_loader.py  ingestion_schema.py  markdown_loader.py  (+5 more)
configs/: base.yaml
frontend/: index.html  package-lock.json  package.json
pipeline/: component_factories.py  config.py  contracts.py  factory_helpers.py  orchestrator.py  registry.py  registry_handlers.py  registry_utils.py  results.py  validator.py  workspace.py
rag_kg/: cli.py
tests/: conftest.py
(+157 files in other folders)
